[package]
name = "artist_portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
askama = "0.11"
rusoto_core = "0.46.0"
rusoto_credential = "0.46.0"
rusoto_s3 = "0.46.0"
tracing = "0.1"
tracing-subscriber = "0.3"
